install(FILES oft.in DESTINATION examples/MUG/GEM COMPONENT examples)
configure_file( oft.in ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
# install(FILES oft_in.xml DESTINATION examples/MUG/GEM COMPONENT examples)
# configure_file( oft_in.xml ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
oft_add_exe( example_gem.F90 )