install(FILES oft.in DESTINATION examples/MUG/Spheromak_heating COMPONENT examples)
configure_file( oft.in ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES oft_in.xml DESTINATION examples/MUG/Spheromak_heating COMPONENT examples)
configure_file( oft_in.xml ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES cyl_heat.h5 DESTINATION examples/MUG/Spheromak_heating COMPONENT examples)
configure_file( cyl_heat.h5 ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
oft_add_exe( MUG_sph_heat.F90 )