install(FILES oft_surf.in DESTINATION examples/MUG/harris_sheet COMPONENT examples)
configure_file( oft_surf.in ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES circle_2d.h5 DESTINATION examples/MUG/harris_sheet COMPONENT examples)
configure_file( circle_2d.h5 ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES oft_in.xml DESTINATION examples/MUG/harris_sheet COMPONENT examples)
configure_file( oft_in.xml ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
oft_add_exe( harris_sheet.F90 )
oft_add_exe( harris_sheet_linear.F90 )
