install(FILES oft_iter.in DESTINATION examples/MUG/equilibrium COMPONENT examples)
configure_file( oft_iter.in ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES iter_mug.h5 DESTINATION examples/MUG/tDiff COMPONENT examples)
configure_file( iter_mug.h5 ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES iter_mug_vde.h5 DESTINATION examples/MUG/tDiff COMPONENT examples)
configure_file( iter_mug_vde.h5 ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES iter_mug_tol.h5 DESTINATION examples/MUG/tDiff COMPONENT examples)
configure_file( iter_mug_tol.h5 ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
oft_add_exe(iter_driver.F90 )
configure_file( oft_in.xml ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)