install(FILES oft_surf.in DESTINATION examples/MUG/psi_test COMPONENT examples)
configure_file( oft_surf.in ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES circle_2d.h5 DESTINATION examples/MUG/psi_test COMPONENT examples)
configure_file( circle_2d.h5 ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
oft_add_exe( sound_wave.F90 )