install(FILES oft_surf.in DESTINATION examples/MUG/tDiff COMPONENT examples)
configure_file( oft_surf.in ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES oft_in.xml DESTINATION examples/MUG/tDiff COMPONENT examples)
configure_file( oft_in.xml ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES circle_2d.h5 DESTINATION examples/MUG/tDiff COMPONENT examples)
configure_file( circle_2d.h5 ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
oft_add_exe( tDiff_surf.F90 )
install(FILES oft_vol.in DESTINATION examples/MUG/tDiff COMPONENT examples)
configure_file( oft_vol.in ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
install(FILES sphere_3d.h5 DESTINATION examples/MUG/tDiff COMPONENT examples)
configure_file( sphere_3d.h5 ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
oft_add_exe( tDiff_vol.F90 )